# elicify-Jarvis

./: .gitignore  Caddyfile  Dockerfile  README.md  deploy.sh  docker-compose.yml  fly.toml  package.json  pyproject.toml
.playwright-mcp/: page-2026-06-09T14-12-42-759Z.yml  page-2026-06-09T14-58-52-617Z.yml  page-2026-06-09T15-00-40-056Z.yml  page-2026-06-09T15-02-21-900Z.yml  page-2026-06-09T15-07-33-978Z.yml  page-2026-06-09T15-09-25-497Z.yml  page-2026-06-09T15-14-17-901Z.yml  page-2026-06-09T15-16-23-898Z.yml  page-2026-06-09T15-22-25-258Z.yml  page-2026-06-09T15-29-37-109Z.yml  page-2026-06-09T18-38-30-457Z.yml  page-2026-06-09T18-49-37-898Z.yml  page-2026-06-09T18-52-41-418Z.yml  page-2026-06-09T19-03-01-339Z.yml  page-2026-06-09T19-05-49-419Z.yml
openclaw/: Caddyfile  Dockerfile  deploy.sh  fly.toml  start.sh
