[project]
name = "hermes-jarvis"
version = "0.1.0"
description = "Deploy Hermes Agent (Nous Research) to a Fly.io pod with the built-in web dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "elicify-ai" },
]

# Hermes Agent is the core dependency. In production we run the official
# Docker image (see Dockerfile) — these Python deps are for local dev
# and for building derived images.
dependencies = [
    "hermes-agent>=0.16.0",
]

[project.optional-dependencies]
web = [
    # Enables `hermes dashboard` (the web UI shipped with Hermes v0.16.0)
    "hermes-agent[web]>=0.16.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bin"]

[tool.ruff]
line-length = 100
target-version = "py311"
